--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,13 @@ body {
   border: none;
   outline: none;
   cursor: pointer;
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: rgba(0, 0, 0, 0.1);
+  color: #ffffff;
 }
 
 .btn-icon{
@@ -240,9 +247,10 @@ body {
 .header-interface .btn-order {
   padding-top: 10px;
   padding-bottom: 9px;
-  text-align: center;
+  border-radius: 0;
   width: 150px;
   background-color: #63a63e;
+
 }
 
 .header-interface .btn-order:hover {
@@ -535,14 +543,6 @@ body {
 
 .plate .btn {
   width: 135px;
-
-  border-radius: 5px;
-  font-size: 14px;
-  line-height: 18px;
-  text-align: center;
-  text-transform: uppercase;
-  background-color: rgba(0, 0, 0, 0.1);
-  color: #ffffff;
 }
 
 .plate .btn:hover {
@@ -617,11 +617,13 @@ body {
   background-color: #ee3643;
 }
 
-.plate-big .btn:hover {
+.plate-big .btn:hover,
+.popular .btn:hover {
   background-color: #ca2c37;
 }
 
-.plate-big .btn:active {
+.plate-big .btn:active,
+.popular .btn:active {
   background-color: #ba2732;
 }
 
@@ -665,17 +667,313 @@ body {
   background: url("../img/new-flag.png") no-repeat;
 }
 
+.popular {
+  margin-bottom: 20px;
+}
+
 .popular .header{
   background-color: #f7f3ec;
   padding: 27px 30px;
+  margin-bottom: 20px;
 }
 
 .popular h2{
   float: left;
-  font-family: 'Cuprum', 'Arial', sans-serif;
   margin: 0;
+  font-family: 'Cuprum', 'Arial', sans-serif;
+  font-weight: normal;
   font-size: 30px;
   line-height: 40px;
   text-transform: uppercase;
   color: #32425c;
+}
+
+.popular .btn {
+  float: right;
+  width: 255px;
+  background-color: #ee3643;
+}
+
+.good {
+  position: relative;
+  float: left;
+  margin-right: 20px;
+  width: 216px;
+  height: 314px;
+  border: 2px solid #e5e5e5;
+}
+
+.good:hover{
+  box-shadow: 0 0 10px 10px rgba(220,220,220,0.5);
+}
+
+.good:nth-of-type(4n) {
+  margin-right: 0;
+}
+
+.good img {
+  display: block;
+  width: 216px;
+  height: 180px;
+}
+
+.good:hover img{
+  display: none;
+}
+
+.good:hover .buttons {
+  display: block;
+}
+
+.good span {
+  display: inline-block;
+  vertical-align: top;
+  width: 216px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.good .buttons {
+  display: none;
+  width: 216px;
+  height: 135px;
+  padding-top: 45px;
+}
+
+.good .btn {
+  display: block;
+  float: none;
+  width: 135px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+}
+
+.good .btn-buy {
+  position: relative;
+  background-color: #63a63e;
+  border-bottom: 3px solid #367315;
+}
+
+.good .icon-basket::before{
+  position: absolute;
+  top: 11px;
+  left: 13px;
+  font-size: 16px;
+  color: #92c178;
+}
+
+.good .btn-buy:hover {
+  background-color: #5fbb2d;
+}
+
+.good .btn-buy:active {
+  background-color: #518534;
+  border-bottom-color:#518534;
+}
+
+.good .btn-buy:hover::before{
+  color: #ffffff;
+}
+
+.good .btn-buy:hover::acive{
+  color: #ffffff;
+}
+
+.good .btn-bookmark {
+  border: 3px solid #63a63e;
+  background-color: #ffffff;
+  color: #32425c;
+}
+
+.good .btn-bookmark:hover{
+  border: 3px solid #32425c;
+  background-color: #ffffff;
+}
+
+.good .btn-bookmark:active {
+  border: 3px solid #c1c6ce;
+  background-color: #ffffff;
+  color: #c1c6ce;
+}
+
+.good span{
+  font-family: 'PT Sans', 'Arial', sans-serif;
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: bold;
+}
+
+.good .old-price {
+  margin: 10px auto;
+  font-size: 18px;
+  line-height: 23px;
+  color: #999999;
+  text-decoration: line-through;
+}
+
+.good .new-price {
+  display: block;
+  width: 140px;
+  margin: 0 auto;
+  padding: 10px 0;
+  background-color: #ee3643;
+  color: #ffffff;
+}
+
+.manufacturers a {
+  display: block;
+  float: left;
+  width: 218px;
+  height: 143px;
+  border: 1px solid #e5e5e5;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  font-size: 0;
+}
+
+.manufacturers a:hover{
+  box-shadow: 0 0 10px 10px rgba(220,220,220,0.5);
+}
+
+.manufacturers a:active{
+  box-shadow: 0 0 5px 5px rgba(220,220,220,0.5);
+  opacity: 0.3;
+}
+
+.manufacturers a:nth-child(4n) {
+  margin-right: 0;
+}
+
+.manufacturers a:nth-child(1) {
+  background: url("../img/bosch.jpg") no-repeat center;
+}
+
+.manufacturers a:nth-child(2) {
+  background: url("../img/makita.jpg") no-repeat center;
+}
+
+.manufacturers a:nth-child(3) {
+  background: url("../img/dewalt.jpg") no-repeat center;
+}
+
+.manufacturers a:nth-child(4) {
+  background: url("../img/interskol.jpg") no-repeat center;
+}
+
+.manufacturers a:nth-child(5) {
+  background: url("../img/hitachi.jpg") no-repeat center;
+}
+
+.manufacturers a:nth-child(6) {
+  background: url("../img/lg.jpg") no-repeat center;
+}
+
+.manufacturers a:nth-child(7) {
+  background: url("../img/aeg.jpg") no-repeat center;
+}
+
+.manufacturers a:nth-child(8) {
+  background: url("../img/metabo.jpg") no-repeat center;
+}
+
+.shadowy {
+  padding: 60px 0;
+  background-color: #f2f6f8;
+  margin-top: 60px;
+}
+
+.main-title-3{
+  font-family: 'Cuprum', 'Arial', sans-serif;
+  font-size: 30px;
+  line-height: 40px;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.main-content p {
+  font-family: 'PT Sans', 'Arial', sans-serif;
+  font-size: 13px;
+  line-height: 24px;
+  color: #000000;
+}
+
+.service {
+  padding-top: 60px;
+  padding-bottom: 100px;
+}
+
+.btn-service{
+  display: block;
+  width: 200px;
+  padding: 15px 20px;
+  border-radius: 0;
+  border-top: 1px solid #405069;
+  border-bottom: 1px solid #293449;
+  background-color: #32425c;
+  color: #ffffff;
+  font-size: 21px;
+  line-height: 29px;
+  font-weight: bold;
+  text-align: left;
+  text-transform: none;
+}
+
+.btn-service.selected {
+  background-color: #ffffff;
+  color: #32425c;
+  border: none;
+  padding: 16px 20px;
+}
+
+.service-buttons{
+  position: relative;
+}
+
+.service-buttons::after{
+  content: "";
+  position: absolute;
+  top: -45px;
+  right: 80px;
+  width: 10px;
+  height: 272px;
+  background: url("../img/shadow.png") no-repeat center;
+}
+
+.btn-service:hover:not(.selected) {
+  background-color: #293449;
+}
+
+.main-content h4 {
+  margin: 0;
+  font-size: 36px;
+  line-height: 48px;
+  text-transform: uppercase;
+  color: #32425c;
+}
+
+.truck{
+  position: relative;
+
+  padding-top: 20px;
+}
+
+.truck::after{
+  content: "";
+  position: absolute;
+  width: 467px;
+  height: 261px;
+  top: 20px;
+  left: -167px;
+  z-index: 0;
+  background: url("../img/truck-shadow.png") no-repeat center;
+}
+
+.truck img {
+  position: relative;
+  display: block;
+  z-index: 2;
+  float: right;
+  width: 206px;
+  height: 146px;
 }
